--- a/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-12">
-  <h4 class="page-title">Danh sách hoạt động</h4>
+  <h4 class="page-title">{{title}}</h4>
   <ol class="breadcrumb">
-    <li><a href="#">Trang chủ</a></li>
-    <li class="active">Điểm danh</li>
+    <li><a>Trang chủ</a></li>
+    <li class="active">{{sub}}</li>
   </ol>
 </div>
