--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -135,7 +135,7 @@
           </li>
 
           <li class="dropdown top-menu-item-xs">
-            <a href="" class="dropdown-toggle profile waves-effect waves-light" data-toggle="dropdown" aria-expanded="true"><img src="../assets/images/users/avatar-1.jpg" alt="user-img" class="img-circle"> </a>
+            <a href="" class="dropdown-toggle profile waves-effect waves-light" data-toggle="dropdown" aria-expanded="true"><img src="https://image.flaticon.com/icons/png/512/78/78373.png" alt="user-img" class="img-circle"> </a>
             <ul class="dropdown-menu">
               <li><a [routerLink]="['/profile']"><i class="ti-user m-r-10 text-custom"></i> Cá nhân</a></li>
               <li class="divider"></li>
