--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -10,9 +10,9 @@
         <!-- form-group -->
       </form>
     </div>
-    <div class="col-md-6">
-      <a *ngIf="!isStudent()" [routerLink]="getRouter()" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"
-        data-animation="fadein" data-plugin="custommodal" data-overlayspeed="200" data-overlaycolor="#36404a">
+    <div class="col-md-6" *ngIf="!isStudent()">
+      <a [routerLink]="getRouter()" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right" data-animation="fadein"
+        data-plugin="custommodal" data-overlayspeed="200" data-overlaycolor="#36404a">
                                 <i class="md md-add"></i> Thêm mới</a>
       <div class="h5 m-0" *ngIf="!isStudent()">
         <div class="btn-group vertical-middle" data-toggle="buttons">
@@ -66,7 +66,11 @@
             <ng-template [ngIf]="isFullPermission()">
               <a (click)="confirm(activity,activity.confirmed?false:true)" class="btn btn-sm waves-effect waves-light" [ngClass]="activity.confirmed?'btn-info':'btn-danger'">{{activity.confirmed?"Hủy duyệt":"Duyệt"}} </a>
             </ng-template>
-            <ng-template [ngIf]="isFullPermission()">
+
+            <ng-template [ngIf]="isFullPermission() || (isRoleOrg() && canEditActivity(activity.confirmed))">
+              <a [routerLink]='getLinkEdit(activity.id)' class="btn btn-sm btn-danger">Sửa</a>
+            </ng-template>
+            <ng-template [ngIf]="isFullPermission() || (isRoleOrg() && canDeleteActivity(activity.confirmed))">
               <a (click)="showModal(activity)" class="btn btn-sm btn-danger">Xóa</a>
             </ng-template>
           </div>
@@ -78,7 +82,8 @@
     <div class="col-lg-12 col-md-12">
       <div style="text-align: center">
         <div class="spinner" [ngClass]="{ 'hidden': !loading }"></div>
-        <pagination-controls class="pagination" (pageChange)="getPage($event)" id="server"></pagination-controls>
+        <!--<pagination-controls class="pagination" (pageChange)="getPage($event)" id="server"></pagination-controls>-->
+        <pagination-controls class="pagination" previousLabel=" " nextLabel=" " (pageChange)="getPage($event)" id="server"></pagination-controls>
       </div>
     </div>
   </div>
