--- a/src/app/pages/activity/components/activity-detail/activity-detail.component.html
+++ b/src/app/pages/activity/components/activity-detail/activity-detail.component.html
@@ -1,71 +1,116 @@
-<div class="col-md-12">
+<div class="col-md-8 col-sm-12">
   <div class="card-box">
     <loading-animate></loading-animate>
     <ng2-toasty [position]="'top-right'"></ng2-toasty>
     <div class="row">
-      <form id="basic-form" action="#">
-        <div role="application" class="wizard clearfix" id="steps-uid-0">
-          <div class="content clearfix">
-            <h3 id="steps-uid-0-h-0" tabindex="-1" class="title current">Hoạt động</h3>
-            <section id="steps-uid-0-p-0" role="tabpanel" aria-labelledby="steps-uid-0-h-0" class="body current" aria-hidden="false">
-              <form role="form" (ngSubmit)="f.form.valid" #f="ngForm" novalidate>
-
-                <div class="form-group clearfix">
-                  <label class="col-lg-2 control-label " for="name">Tên hoạt động</label>
-                  <div class="col-lg-10">
-                    <input [(ngModel)]="data.name" class="form-control required" [ngClass]="{ 'parsley-error': (hasErrorField('name')) }" name="name"
-                      id="name" type="text">
-                    <ul *ngIf="(hasErrorField('name'))" class="parsley-errors-list filled" id="parsley-id-5">
-                      <li class="parsley-required">Tên hoạt động không được để trống.</li>
-                    </ul>
+      <div class="col-md-12">
+        <form id="basic-form" action="#">
+          <div role="application" class="clearfix" id="steps-uid-0">
+            <div class="content clearfix">
+              <h2 id="steps-uid-0-h-0" style="margin-bottom: 30px;" class="title current">
+                <i class="fa fa-pencil" aria-hidden="true"></i> Hoạt động
+              </h2>
+              <section id="steps-uid-0-p-0" role="tabpanel" aria-labelledby="steps-uid-0-h-0" class="body current" aria-hidden="false">
+                <form role="form" (ngSubmit)="f.form.valid" #f="ngForm" novalidate>
+                  <div class="form-group clearfix">
+                    <label class="col-lg-2 control-label " for="name">Tên hoạt động</label>
+                    <div class="col-lg-10">
+                      <input [(ngModel)]="data.name" class="form-control required" [ngClass]="{ 'parsley-error': (hasErrorField('name')) }" name="name"
+                        id="name" type="text">
+                      <ul *ngIf="(hasErrorField('name'))" class="parsley-errors-list filled" id="parsley-id-5">
+                        <li class="parsley-required">Tên hoạt động không được để trống.</li>
+                      </ul>
+                    </div>
                   </div>
-                </div>
-                <div class="form-group clearfix">
-                  <label class="col-lg-2 control-label " for="confirm">Thời gian</label>
-                  <div class="col-lg-10">
-                    <input type="text" class="form-control input-daterange-timepicker" daterangepicker [options]="options" (selected)="selectedDate($event)"
-                      name="daterange">
+                  <div class="form-group clearfix">
+                    <label class="col-lg-2 control-label " for="confirm">Thời gian</label>
+                    <div class="col-lg-10">
+                      <input type="text" class="form-control input-daterange-timepicker" daterangepicker [options]="options" (selected)="selectedDate($event)"
+                        name="daterange">
+                    </div>
                   </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6 col-sm-6">
-                    <div class="form-group clearfix">
-                      <label class="col-lg-4 control-label " for="confirm">Điểm rèn luyện</label>
-                      <div class="col-lg-8">
-                        <input [(ngModel)]="data.pointTranning" type="text" class="form-control" name="pointTranning" value="0">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                      <div class="form-group clearfix">
+                        <label class="col-lg-4 control-label " for="confirm">Điểm rèn luyện</label>
+                        <div class="col-lg-8">
+                          <input [(ngModel)]="data.pointTranning" type="text" class="form-control" name="pointTranning" value="0">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                      <div class="form-group clearfix">
+                        <label class="col-lg-4 control-label " for="confirm">Điểm CTXH</label>
+                        <div class="col-lg-8">
+                          <input type="text" [(ngModel)]="data.pointSocial" class="form-control" name="pointSocial" value="{{data.pointSocial}}">
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6 col-sm-6">
-                    <div class="form-group clearfix">
-                      <label class="col-lg-4 control-label " for="confirm">Điểm CTXH</label>
-                      <div class="col-lg-8">
-                        <input type="text" [(ngModel)]="data.pointSocial" class="form-control" name="pointSocial" value="0">
+                  <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                      <div class="form-group clearfix">
+                        <label class="col-lg-2 control-label" for="confirm">Nội dung</label>
+                        <div class="col-lg-10">
+                          <textarea rows="20" id="description" [(ngModel)]="data.description" name="description" aria-hidden="true">
+                      {{data.description}}
+                    </textarea>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
 
-                <div class="form-group clearfix">
-                  <label class="col-lg-2 control-label" for="confirm">Nội dung</label>
-                  <div class="col-lg-10">
-                    <textarea id="description" [(ngModel)]="data.description" name="description" aria-hidden="true"></textarea>
-                  </div>
-                </div>
-                <div class="form-group text-right m-b-0">
-                  <button type="reset" class="btn btn-default waves-effect waves-light m-l-5">
-											 Bỏ qua
-											</button>
-                  <button [disabled]="isLoading()" (click)="submitActivity()" class="btn btn-primary waves-effect waves-light" type="submit">
-											Lưu
-                      <i [hidden]="!isLoading()" style="margin-left: 5px;" class="fa fa-spinner fa-spin fa-lg"></i>
-											</button>
-                </div>
-              </form>
-            </section>
+                </form>
+              </section>
+            </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
+</div>
+<div class="col-md-4 col-sm-12">
+  <div class="card-box">
+    <h2>Ảnh đại diện</h2>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="form-group">
+          <label class="control-label">Đường dẫn</label>
+          <input type="file" class="filestyle" #file (change)="onImgChange(file) " data-iconname="fa fa-cloud-upload" id="filestyle-6"
+            tabindex="-1" style="position: absolute; clip: rect(0px 0px 0px 0px);">
+          <div class="bootstrap-filestyle input-group"><input type="text" class="form-control " placeholder="" disabled=""> <span class="group-span-filestyle input-group-btn"
+              tabindex="0">
+          <label for="filestyle-6" class="btn btn-default ">
+            <span class="icon-span-filestyle fa fa-cloud-upload"></span>
+            <span class="buttonText">Chọn file</span></label>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <img id="img" width="300" height="300" src="{{imgSrc}}" alt="Avatar" [hidden]="imgSrc?false:true" />
+      </div>
+    </div>
+    <div class="row" style="padding-top:20px">
+      <div class="col-md-6">
+        <button style="width: 100%" [disabled]="isLoading()" (click)="submitActivity() " class="btn btn-primary waves-effect waves-light"
+          type="submit">
+											Lưu
+                      <i [hidden]="!isLoading()" style="margin-left: 5px; " class="fa fa-spinner fa-spin fa-lg "></i>
+					</button>
+      </div>
+      <div class="col-md-6">
+        <button style="width: 100%" type="reset" class="btn btn-default waves-effect waves-light m-l-5 ">
+											 Bỏ qua
+											</button>
+      </div>
+    </div>
+    <div class="form-group m-b-0 ">
+
+
+    </div>
+  </div>
+
 </div>
