--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -33,7 +33,7 @@
             <td>{{user.email}}</td>
             <td>{{user.id}}</td>
             <td>
-              <a [routerLink]="['/users/edit/',(user.username)]" class="btn btn-default user">Sửa</a>
+              <a [routerLink]="['/pages/cbd/users/edit/',(user.username)]" class="btn btn-default user">Sửa</a>
               <button data-toggle="custom-modal" data-target="#custom-modal" class="btn btn-danger del">Xóa</button>
             </td>
           </tr>
