--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -564,7 +564,7 @@
         }
         
         .post-body img {
-            max-width: 500px;
+            /*max-width: 500px;*/
         }
         
         .thumb {
