--- a/src/app/pages/activity/components/activity-detail/activity-detail.component.html
+++ b/src/app/pages/activity/components/activity-detail/activity-detail.component.html
@@ -1,7 +1,7 @@
+<ng2-toasty [position]="'top-right'"></ng2-toasty>
 <div class="col-md-8 col-sm-12">
   <div class="card-box">
     <loading-animate></loading-animate>
-    <ng2-toasty [position]="'top-right'"></ng2-toasty>
     <div class="row">
       <div class="col-md-12">
         <form id="basic-form" action="#">
@@ -90,7 +90,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
-        <img id="img" width="300" height="300" src="{{imgSrc}}" alt="Avatar" [hidden]="imgSrc?false:true" />
+        <img #img id="img" width="300" height="300" src="{{imgSrc}}" alt="Avatar" [hidden]="imgSrc?false:true" />
       </div>
     </div>
     <div class="row" style="padding-top:20px">
