--- a/src/assets/css/core.css
+++ b/src/assets/css/core.css
@@ -322,8 +322,9 @@ a:focus {
   width: 48px;
 }
 .thumb-lg {
-  height: 88px;
-  width: 88px;
+  height: 120px;
+  width: 120px;
+  border-radius: 20%;
 }
 /* =============
    Extras
