--- a/src/assets/css/core.css
+++ b/src/assets/css/core.css
@@ -341,7 +341,7 @@ a:focus {
 }
 /* Card Box */
 .card-box {
-  padding: 20px;
+  padding: 10px 20px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   -moz-border-radius: 5px;
