--- a/src/app/pages/main/components/activity/activity.component.html
+++ b/src/app/pages/main/components/activity/activity.component.html
@@ -5,7 +5,7 @@
             <a href="#/activities/post/{{data.id}}">
                <div class="large_thumb thumb_hover">
                   <div class="img_wrapper">
-                     <img class="thumb" src="https://4.bp.blogspot.com/-EUyHEO_NPEw/U5oSvanjKuI/AAAAAAAAAbs/Fbpum51zFxA/s1600/1+(1).jpg">
+                     <img class="thumb" src="{{getLinkImg(data.imgUrl)}}">
                   </div>
                </div>
             </a>
