--- a/src/app/pages/main/components/header/header.component.html
+++ b/src/app/pages/main/components/header/header.component.html
@@ -10,7 +10,7 @@
                   <div id="header-inner">
                     <a [routerLink]="['/']" style="display: block">
                         <img alt="Logo university" height="40px;" 
-                         src="http://hcmute.edu.vn/Resources/Images/SubDomain/HomePage/Nut/logo-news.png"
+                         src="http://localhost:8081/files/hcmute.png"
                          style="display: block" width="140px; "/>
                     </a>
                   </div>
