--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <ng-template [ngIf]="currentPermission.role.id=='ADMIN'">
             <li class="has_sub">
               <a href="javascript:void(0);" class="waves-effect">
-              <i class="ti-paint-bucket"></i>
+              <i class="fa fa-tasks"></i>
                <span> Quản lý hoạt động </span> 
                <span class="menu-arrow"></span> 
                </a>
