--- a/src/app/pages/main/components/footer/footer.component.html
+++ b/src/app/pages/main/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<div id="footer" style="margin-top:20px">
   <div class="container">
     <div class="row">
       <div class="twelve columns wrapper">
