--- a/src/app/pages/main/components/header/header.component.html
+++ b/src/app/pages/main/components/header/header.component.html
@@ -1,56 +1,47 @@
-<div class="top_wrapper">
-  <div id="header-wrapper">
-    <div class="ornament">
-      <div class="container">
-        <div class="row">
-          <div class="twelve columns">
-            <div class="header_left">
-              <div class="header section" id="header">
-                <div class="widget Header">
-                  <div id="header-inner">
-                    <a [routerLink]="['/']" style="display: block">
-                        <img alt="Logo university" height="40px;" 
-                         src="http://localhost:8081/files/hcmute.png"
-                         style="display: block" width="140px; "/>
-                    </a>
-                  </div>
+<div class="">
+  <div class="ornament">
+    <div class="container" style="padding: 0px; background-color: #fff">
+      <div class="row" style="padding: 20px 0">
+        <div class="col-lg-6 col-md-6">
+          <img src="/assets/images/logo-news.png" alt="banner" width="400" height="200" style="margin: 0 20px">
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <div class="pull-right">
+            <img src="/assets/images/banner.jpg" alt="banner" width="300" height="200">
+          </div>
+        </div>
+      </div>
+      <div class="row" style="background-color: #0e76bc;">
+        <div class="col-md-12 col-lg-12">
+          <div class="header_right">
+            <div class="menu-navigation-container">
+              <ul class="sf-menu sf-js-enabled sf-shadow" style="padding-top: 4px; font-size: 14px">
+                <li class="current-menu-item">
+                  <a [routerLink]="['/']">TRANG CHỦ</a>
+                </li>
+                <li class="">
+                  <a href="#" class="sf-with-ul">
+                      CLB/ĐỘI/NHÓM
+                      <i class="fa fa-caret-down"></i>
+                  </a>
+                  <ul class="sub-menu">
+                    <li *ngFor="let org of orgs">
+                      <a href="#/organizations/{{org.id}}">{{org.name}}</a>
+                    </li>
+                  </ul>
+                </li>
+                <li><a href="{{getLinkLogin()}}">{{!accessToken?"ĐĂNG NHẬP":userName}}</a></li>
+              </ul>
+              <div class="search-bar">
+                <div class="nav-search">
+                  <form action="/search" id="searchform" method="get" role="search">
+                    <input class="search_input" (input)="onSearchChange($event.target.value)" id="s" name="q" onblur="if(this.value=='')this.value=this.defaultValue;"
+                      onfocus="if(this.value==this.defaultValue)this.value=''" type="text" value="Tìm kiếm">
+                  </form>
+                  <div class="srch_btn" style="margin-top: -10px"></div>
                 </div>
               </div>
             </div>
-            <div class="header_right">
-              <div class="menu-navigation-container" id="top_menu">
-                <ul class="sf-menu sf-js-enabled sf-shadow" id="mainmenu">
-                  <li class="current-menu-item">
-                    <a [routerLink]="['/']">Trang chủ</a>
-                  </li>
-                  <li>
-                    <a [routerLink]="['/']">Nổi bật</a>
-                  </li>
-                  <li class="">
-                    <a href="#" class="sf-with-ul">
-                      Danh sách
-                      <span class="sf-sub-indicator"> » </span>
-                      </a>
-                    <ul class="sub-menu">
-                      <li *ngFor="let org of orgs">
-                        <a href="#/organizations/{{org.id}}">{{org.name}}</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li><a href="{{getLinkLogin()}}">{{!accessToken?"Đăng nhập":userName}}</a></li>
-                </ul>
-                <div class="search-bar">
-                  <div class="nav-search">
-                    <form action="/search" id="searchform" method="get" role="search">
-                      <input class="search_input" (input)="onSearchChange($event.target.value)" id="s" name="q" onblur="if(this.value=='')this.value=this.defaultValue;"
-                        onfocus="if(this.value==this.defaultValue)this.value=''" type="text" value="Tìm kiếm">
-                    </form>
-                    <div class="srch_btn"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="clear"></div>
           </div>
         </div>
       </div>
