--- a/src/app/pages/main/components/post/post.component.html
+++ b/src/app/pages/main/components/post/post.component.html
@@ -1,103 +1,93 @@
 <ng2-toasty [position]="'top-right'">
 </ng2-toasty>
 <link rel="stylesheet" href="../assets/css/detail.css">
-<div class="row">
-  <div class="twelve columns">
-    <div class="inner">
-      <div class="main section" id="main">
-        <div class="widget Blog" data-version="1" id="Blog1">
-          <div class="post_col masonry-brick">
-            <div class="post_item">
-              <div class="row">
-                <div class="col-lg-8 col-md-8">
-                  <h1 style="color:#000">
-                    {{data.name}}
-                  </h1>
-                </div>
-                <div class="col-lg-4 col-md-4" style="height: 70px">
-                  <div class="pull-right" style="padding-top: 15px">
-                    <div *ngIf="isLogged() && isCanRegister()">
-                      <button (click)="register(data.id)" class="btn btn-primary">
+<div class="container" style="padding-left: 0; padding-right: 0">
+  <div class="row" style="padding-top: 10px">
+    <div class="post_col masonry-brick">
+      <div class="post_item">
+        <div class="row">
+          <div class="col-lg-8 col-md-8">
+            <h1 style="color:#000">
+              {{data.name}}
+            </h1>
+          </div>
+          <div class="col-lg-4 col-md-4" style="height: 70px">
+            <div class="pull-right" style="padding-top: 15px">
+              <div *ngIf="isLogged() && isCanRegister()">
+                <button (click)="register(data.id)" class="btn btn-primary">
                           {{isRegistered?"Đã đăng ký":"Đăng ký"}}
                         </button>
-                    </div>
-                  </div>
-                </div>
               </div>
-              <div class="post_meta">
-                <span class="user" style="color: #E74C3C; font-size: 14pt">
-                    {{data.organization?data.organization.name:""}}
+            </div>
+          </div>
+        </div>
+        <div class="post_meta">
+          <span class="user" style="color: #E74C3C; font-size: 14pt">
+                   {{data.organization?data.organization.name:""}}
                   </span>
-                <span class="time" style="color: #E74C3C; font-size: 14pt">
+          <span class="time" style="color: #E74C3C; font-size: 14pt">
                       Bắt đầu: {{data.startDate}}
                 </span>
-                <span class="time" style="color: #E74C3C; font-size: 14pt">
+          <span class="time" style="color: #E74C3C; font-size: 14pt">
                      Kết thúc: {{data.endDate}}
                 </span>
-              </div>
-              <div class="post-body" style="font-size: 14pt" [innerHTML]="data.description">
-              </div>
-              <div class="clear"></div>
-              <div class="post-footer">
-              </div>
-            </div>
-            <div class="post_author">
-              <div class="author_avatar">
-                <div class="small_thumb">
-                  <div class="author-avatar">
-                    <img width="100" height="100" src="//lh3.googleusercontent.com/-WVcT2suMskc/AAAAAAAAAAI/AAAAAAAAALI/gq5ESmvHmAs/s512-c/photo.jpg"></div>
-                </div>
-              </div>
-              <div class="author_wrapper">
-                <h4>Tổ chức:
-                  <a [routerLink]="['/organizations',data.organization?data.organization.id:'']"> {{data.organization?data.organization.name:""}}</a>
-                </h4>
-                <p> {{data.organization?data.organization.description:""}}</p>
-              </div>
-              <div class="clear"></div>
-            </div>
-            <div id="related-posts">
-              <h3 class="heading-border"><span>Hoạt động liên quan</span></h3>
-              <ul>
-                <li>
-                  <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2013/12/duis-quis-erat-non-nunc-fringilla_14.html" rel="nofollow"><img alt="Duis quis erat non nunc fringilla" src="http://2.bp.blogspot.com/-yYZktWG83Yw/Uqyb2oXkeZI/AAAAAAAACuY/vacuPi29d8c/w129/audio3-700x352.jpg"></a></div>
-                  <a href="http://straight-themexpose.blogspot.com/2013/12/duis-quis-erat-non-nunc-fringilla_14.html" rel="nofollow">Duis quis erat non nunc fringilla</a>
-                </li>
-                <li>
-                  <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2013/12/donec-volutpat-nibh-sit-amet-libero_14.html" rel="nofollow"><img alt="Donec volutpat nibh sit amet libero ornare" src="http://2.bp.blogspot.com/-SlL7Drv-SAs/UqycUzI_VhI/AAAAAAAACuk/YTHwukso4UU/w129/audio2-700x352.jpg"></a></div>
-                  <a href="http://straight-themexpose.blogspot.com/2013/12/donec-volutpat-nibh-sit-amet-libero_14.html" rel="nofollow">Donec volutpat nibh sit amet libero ornare</a>
-                </li>
-                <li>
-                  <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2013/12/nullam-molestie-gravida-lobortis_7347.html" rel="nofollow"><img alt="Nullam molestie gravida lobortis." src="http://1.bp.blogspot.com/-HjcotfmFhlo/Uqya44MNjfI/AAAAAAAACuI/ns4BUw7EdfY/w129/audio1-700x352.jpg"></a></div>
-                  <a href="http://straight-themexpose.blogspot.com/2013/12/nullam-molestie-gravida-lobortis_7347.html" rel="nofollow">Nullam molestie gravida lobortis.</a>
-                </li>
-                <li>
-                  <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2014/05/a-standart-post-with-image-aligned-right_14.html"
-                      rel="nofollow"><img alt="A Standard Post With Image Aligned Right" src="http://4.bp.blogspot.com/-EUyHEO_NPEw/U5oSvanjKuI/AAAAAAAAAbs/Fbpum51zFxA/w129/1+(1).jpg"></a></div>
-                  <a href="http://straight-themexpose.blogspot.com/2014/05/a-standart-post-with-image-aligned-right_14.html" rel="nofollow">A Standard Post With Image Aligned Right</a>
-                </li>
-                <li>
-                  <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2014/05/a-normal-article-post-white-thumbnail_12.html"
-                      rel="nofollow"><img alt="A Normal Article Post White Thumbnail" src="http://4.bp.blogspot.com/-VY2ZDaIVE1M/U5oS1irzrqI/AAAAAAAAAb0/_Ja0nliOF84/w129/andrey-gordeev-global-logos-3.jpg"></a></div>
-                  <a href="http://straight-themexpose.blogspot.com/2014/05/a-normal-article-post-white-thumbnail_12.html" rel="nofollow">A Normal Article Post White Thumbnail</a>
-                </li>
-                <div class="clear"></div>
-              </ul>
-            </div>
-            <div id="related-posts">
-              <h3 class="heading-border"><span>Bình luận</span></h3>
-              <div class="comment" style="padding: 0 20px">
-                <!--<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="100%"
-                  data-numposts="5"></div>-->
-                <fb-comments width="100%" orderBy="time"></fb-comments>
-              </div>
-            </div>
-
-          </div>
-          <div class="clear"></div>
+        </div>
+        <div class="post-body" style="font-size: 14pt" [innerHTML]="data.description">
+        </div>
+        <div class="clear"></div>
+        <div class="post-footer">
         </div>
       </div>
+      <div class="post_author">
+        <div class="author_avatar">
+          <div class="small_thumb">
+            <div class="author-avatar">
+              <img width="100" height="100" src="/assets/images/spkt.png"></div>
+          </div>
+        </div>
+        <div class="author_wrapper">
+          <h4>Tổ chức:
+            <a [routerLink]="['/organizations',data.organization?data.organization.id:'']"> {{data.organization?data.organization.name:""}}</a>
+          </h4>
+          <p> {{data.organization?data.organization.description:""}}</p>
+        </div>
+        <div class="clear"></div>
+      </div>
+      <!--<div id="related-posts">
+        <h3 class="heading-border"><span>Hoạt động liên quan</span></h3>
+        <ul>
+          <li>
+            <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2013/12/duis-quis-erat-non-nunc-fringilla_14.html" rel="nofollow"><img alt="Duis quis erat non nunc fringilla" src="http://2.bp.blogspot.com/-yYZktWG83Yw/Uqyb2oXkeZI/AAAAAAAACuY/vacuPi29d8c/w129/audio3-700x352.jpg"></a></div>
+            <a href="http://straight-themexpose.blogspot.com/2013/12/duis-quis-erat-non-nunc-fringilla_14.html" rel="nofollow">Duis quis erat non nunc fringilla</a>
+          </li>
+          <li>
+            <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2013/12/donec-volutpat-nibh-sit-amet-libero_14.html" rel="nofollow"><img alt="Donec volutpat nibh sit amet libero ornare" src="http://2.bp.blogspot.com/-SlL7Drv-SAs/UqycUzI_VhI/AAAAAAAACuk/YTHwukso4UU/w129/audio2-700x352.jpg"></a></div>
+            <a href="http://straight-themexpose.blogspot.com/2013/12/donec-volutpat-nibh-sit-amet-libero_14.html" rel="nofollow">Donec volutpat nibh sit amet libero ornare</a>
+          </li>
+          <li>
+            <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2013/12/nullam-molestie-gravida-lobortis_7347.html" rel="nofollow"><img alt="Nullam molestie gravida lobortis." src="http://1.bp.blogspot.com/-HjcotfmFhlo/Uqya44MNjfI/AAAAAAAACuI/ns4BUw7EdfY/w129/audio1-700x352.jpg"></a></div>
+            <a href="http://straight-themexpose.blogspot.com/2013/12/nullam-molestie-gravida-lobortis_7347.html" rel="nofollow">Nullam molestie gravida lobortis.</a>
+          </li>
+          <li>
+            <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2014/05/a-standart-post-with-image-aligned-right_14.html" rel="nofollow"><img alt="A Standard Post With Image Aligned Right" src="http://4.bp.blogspot.com/-EUyHEO_NPEw/U5oSvanjKuI/AAAAAAAAAbs/Fbpum51zFxA/w129/1+(1).jpg"></a></div>
+            <a href="http://straight-themexpose.blogspot.com/2014/05/a-standart-post-with-image-aligned-right_14.html" rel="nofollow">A Standard Post With Image Aligned Right</a>
+          </li>
+          <li>
+            <div class="pthumb"><a href="http://straight-themexpose.blogspot.com/2014/05/a-normal-article-post-white-thumbnail_12.html" rel="nofollow"><img alt="A Normal Article Post White Thumbnail" src="http://4.bp.blogspot.com/-VY2ZDaIVE1M/U5oS1irzrqI/AAAAAAAAAb0/_Ja0nliOF84/w129/andrey-gordeev-global-logos-3.jpg"></a></div>
+            <a href="http://straight-themexpose.blogspot.com/2014/05/a-normal-article-post-white-thumbnail_12.html" rel="nofollow">A Normal Article Post White Thumbnail</a>
+          </li>
+          <div class="clear"></div>
+        </ul>
+      </div>-->
+      <div id="related-posts">
+        <h3 class="heading-border"><span>Bình luận</span></h3>
+        <div class="comment" style="padding: 0 20px">
+          <!--<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="100%"
+                  data-numposts="5"></div>-->
+          <fb-comments width="100%" orderBy="time"></fb-comments>
+        </div>
+      </div>
+
     </div>
   </div>
-  <div class="clear"></div>
 </div>
