--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -63,7 +63,7 @@
         }
         
         body {
-            background: #fff url(//2.bp.blogspot.com/-JBkzpiZnXgs/U5sVmGtOffI/AAAAAAAAAd4/6IjWmogLWTg/s1600/slide-01.jpg)fixed center;
+            background: #fff url(../images/background.jpg)fixed center;
             color: #666666;
             font: 400 13px/1.6 Arial, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
             word-wrap: break-word;
@@ -522,7 +522,7 @@
         .post_item,
         #comments {
             background-color: #FFFFFF;
-            border-bottom: 2px solid #d1d1d2;
+            /*border-bottom: 2px solid #d1d1d2;*/
         }
         
         .post_item {
@@ -572,10 +572,11 @@
             height: auto !important;
             width: 100% !important;
         }
+
         
         .post_meta {
-            background: url("https://lh3.googleusercontent.com/-1QB3XFmdlYY/UcPyBWfyb4I/AAAAAAAAB74/ITrfhAVjwNI/s67/pattern.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
-            border-bottom: 1px dashed #ddd;
+            /*background: url("https://lh3.googleusercontent.com/-1QB3XFmdlYY/UcPyBWfyb4I/AAAAAAAAB74/ITrfhAVjwNI/s67/pattern.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);*/
+            /*border-bottom: 1px dashed #ddd;*/
             padding: 8px 20px;
         }
         
